product_docs/docs/pgaa/1.9/index.mdx
---
title: Postgres Analytics Accelerator (PGAA)
navTitle: Postgres Analytics Accelerator (PGAA)
navRootedTo: /edb-postgres-ai/analytics
description: Explore EDB Postgres Analytics Accelerator with concepts, how-tos, and reference material.
redirects:
- /pgaa/1.6/:splat
- /pgaa/1.7/:splat
- /pgaa/1.8/:splat
- /purl/analytics
- /edb-postgres-ai/latest/analytics/
- /edb-postgres-ai/latest/analytics/101/
- /edb-postgres-ai/latest/analytics/201/
- /edb-postgres-ai/latest/analytics/301/
- /edb-postgres-ai/latest/analytics/create-lakehouse-cluster/
- /edb-postgres-ai/latest/analytics/delta_lake/
- /edb-postgres-ai/latest/analytics/getting-setup/
- /edb-postgres-ai/latest/analytics/how-to-iceberg-reads-writes-with-catalog/
- /edb-postgres-ai/latest/analytics/how-to-lakehouse-read-with-without-catalog/
- /edb-postgres-ai/latest/analytics/how-to-read-write-without-catalog/
- /edb-postgres-ai/latest/analytics/how-to-third-party-catalog/
- /edb-postgres-ai/latest/analytics/iceberg/
- /edb-postgres-ai/latest/analytics/lakehouse/
- /edb-postgres-ai/latest/analytics/learn/
- /edb-postgres-ai/latest/analytics/paths/
- /edb-postgres-ai/latest/analytics/personas/
- /edb-postgres-ai/latest/analytics/tiered_tables
- /edb-postgres-ai/latest/analytics/tiered_tables_howto/
navigation:
- release_notes
- overview
- installing
- read_no_catalog
- catalog
- ctas 
- pgd
- spark 
- whpg
- monitoring
- optimize_performance
- backup_restore
- reference
---


Postgres Analytics Accelerator (PGAA) is a high-performance extension that enables Postgres to query large-scale data stored in open table formats like Delta Lake, Apache Iceberg, and Parquet. By offloading heavy analytical queries to a vectorized execution engine, PGAA bridges the gap between operational databases and data lakes.


### Get started
* [Compatibility](overview/compatibility): Check supported PostgreSQL versions, operating systems, and other requirements.

* [Architecture](overview/architecture): Understand the core architecture and how the vectorized engine works.

* [Core concepts](overview/concepts): Understand the fundamental principles of vectorized execution, data lake integration, and DirectScan.

* [Quickstart guide](overview/quick_start): Install PGAA, create a storage location and read table from our sample benchmark datasets.

### Using PGAA

* [Installation](installing): Step-by-step instructions for installing the extension and enabling the Seafowl background worker.

* [Read from object storage](read_no_catalog): Connect directly to S3, GCS, or Azure Blob Storage to query Parquet, Delta, or Iceberg files using a PGFS storage location.

* [Read using Iceberg catalogs](catalog): Integrate with external Iceberg REST catalogs to manage table metadata.

* [Write to object storage using CTAS](ctas): Use `CREATE TABLE AS SELECT` (CTAS) to export Postgres data into optimized lakehouse formats in your object store.

### Replicating with PGD

* [Replicating with PGD:](pgd) Combine PGD and PGAA to manage the complete data lifecycle, from automated partition offloading and real-time replication to surgical archival of cold data in object storage.

### Performance & optimization

* [Accelerate with Spark](spark): Offload massive datasets and complex distributed joins to a remote Spark cluster via Spark Connect. PGAA offers two integration modes depending on your performance requirements:

    - [Standard Spark integration:](spark/spark-only) Leverage a remote Spark cluster for high-concurrency analytical queries and distributed processing.

    - [GPU-Accelerated Spark](spark/spark-rapids): Integrate with the NVIDIA RAPIDS Accelerator for Apache Spark to leverage GPU acceleration.

* [Monitor and maintain your analytical tables](monitoring): Audit storage utilization, monitor table health, and perform table maintenance tasks for PGAA-managed tables.

* [Optimize query performance](optimize_performance): Maximize query speeds by managing DirectScan execution, configuring compute pushdowns, and troubleshooting path fallbacks.

### Operations

* [Backup and restore](backup_restore): How a Postgres physical backup interacts with PGAA's catalog tables and object-store data, the recommended 3-node restore procedure, and known limitations around point-in-time recovery.

### Reference

* [Configuration parameters](reference/configuration_parameters): The behavior of the PGAA extension is governed by Grand Unified Configuration (GUC) variables. These parameters allow you to switch executors, enable performance optimizations, and manage security credentials.

* [Functions](reference/functions): PGAA introduces a suite of SQL functions for administrative tasks, such as mapping new tables, monitoring storage health, and launching maintenance background jobs.

* [Table options](reference/table_options): When mapping or creating analytical tables, specific options allow you to define how data is read from or written to your object store.

* [Data types](reference/data_types): PGAA maps native Postgres data types to optimized columnar formats in the data lake.

* [Datasets](reference/datasets): Access pre-configured schemas and data loading instructions for analytical datasets to baseline your performance.
